// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly with a single author 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "color": "#069",
        "textDecorationLine": "none",
      }
    }
  >
    Fiona Hamilton
  </Text>
</Text>
`;

exports[`renders correctly with multiple authors, titles and texts 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
      },
      undefined,
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Object {
          "color": "#069",
          "textDecorationLine": "none",
        }
      }
    >
      Greg Hurst
    </Text>
    , Social Affairs Correspondent | Mark Bridge, Technology Correspondent | 
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      onPress={[Function]}
      style={
        Object {
          "color": "#069",
          "textDecorationLine": "none",
        }
      }
    >
      Fiona Hamilton
    </Text>
  </Text>
</Text>
`;

exports[`renders correctly with styles 1`] = `
<Text
  accessible={true}
  allowFontScaling={true}
  ellipsizeMode="tail"
  style={
    Array [
      Object {
        "color": "#696969",
        "fontFamily": "GillSansMTStd-Medium",
        "fontSize": 13,
      },
      Object {
        "color": "blue",
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
    onPress={[Function]}
    style={
      Object {
        "color": "red",
        "textDecorationLine": "underline",
      }
    }
  >
    Fiona Hamilton
  </Text>
</Text>
`;
